@@ -1,3 +1,7 @@
+2019-01-03  Daniel Hawkins
+    * server/skills.c: Fix encumbered throw logic to penalize high encumbrance
+      instead of reward it.
+
 2018-12-31  Daniel Hawkins
     * utils/crossloop.web.in: Make SRCDIR be determined on the fly.
       This reduces the number of variables that need to be changed before use.
